testing author parameter

--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ relativeURLs = "true"
 canonifyURLs = "true"
 
 [Params]
+  author = "Liam"
   subtitle = ""
   logo = "img/srm.png"
   favicon = "img/favicon.ico"
